--- a/index.html
+++ b/index.html
@@ -14,17 +14,27 @@
         <table id="csvTable">
             <thead>
                 <tr>
-                    <th>Modules</th>
-                    <th>Files</th>
+                    <th class="tableThTitle">Modules</th>
                 </tr>
             </thead>
             <tbody>
-                <!-- Здесь будут данные из CSV-файла -->
+                <tr>
+                    <th><a href="AV/index.html" target="_blank">ArchViz</a></th>
+                </tr>
+                <tr>
+                    <th><a href="VR/index.html" target="_blank">Virtual Reality</a></th>
+                </tr>
+                <tr>
+                    <th><a href="LB/index.html" target="_blank">Bake Lighting</a></th>
+                </tr>
+                <tr>
+                    <th><a href="BP/index.html" target="_blank">Blueprints English</a></th>
+                </tr>
+                <tr>
+                    <th><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Blueprints Spanish</a></th>
+                </tr>
             </tbody>
         </table>
     </main>
-    <footer>
-        <script src="script.js"></script>
-    </footer>
 </body>
 </html>
