--- a/VR/index.html
+++ b/VR/index.html
@@ -24,7 +24,7 @@
         </table>
     </main>
     <footer>
-        <button class="justAbutton">Кнопка</button>
+        <button class="justAbutton"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Кнопка</a></button>
         <script src="script.js"></script>
     </footer>
 </body>
