--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <table id="csvTable">
             <thead>
                 <tr>
-                    <th class="tableThTitle">Modules</th>
+                    <th class="tableThTitle">Courses</th>
                 </tr>
             </thead>
             <tbody>
